testsuite/negative/Issue-git-0543.n
public interface A
{
  private class B { }
  protected class C { }
}

_ = A.B(); // E: cannot access type `A.B'
_ = A.C(); // E: cannot access type `A.C'
